--- a/style.css
+++ b/style.css
@@ -5,13 +5,7 @@ font-family:Constantia;
 font-size:30px;
 }
 
-.register_border{
-border-radius:5px;
-border:1px solid lightgrey;
-padding:15px 15px;
-width:40%;
-margin-bottom:25px;
-}
+
 
 .l1{
 	font-family:Courier;
@@ -72,6 +66,13 @@ margin-bottom:25px;
 	margin-left:5px;
 }
 
+.register_border{
+border-radius:5px;
+border:1px solid lightgrey;
+padding:15px 15px;
+width:40%;
+margin-bottom:25px;
+}
 
 .error{
 	color:red;
@@ -87,6 +88,7 @@ form{
 }
 
 table{
+     width:50%;
      margin-top: 50px;
      margin-bottom: 22px;
     
@@ -125,6 +127,7 @@ th,td{
     border-bottom: 1px solid lightgrey;
     border-right: 1px solid lightgrey;
     padding: 2px 15px;
+    font-family:Courier;
 }
 
 .c1{
@@ -173,6 +176,12 @@ input:read-only{
     background: lightgrey;
 }
 
+#logout{
+    margin-left: 32%;
+}
+img{
+    width:25%;
+}
 @media only screen and (max-width: 600px) {
 	.register_border{
 	width:100%;
@@ -187,6 +196,26 @@ input:read-only{
 	font-size:20px;
 	}
         
-
+        table{
+        width:100%;
+        }
+        th,td{
+          font-size: 15px;
+       padding: 2px 5px;
+        }  
+        
+        #logout{
+           position:absolute;
+           float:right;
+        }
+        
+        .welcome{
+            font-size: 18px;
+        }
+        
+        .fa-edit,.fa-trash-alt{
+    font-size: 15px;
+}
+        
 
 }
